// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> is disabled 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root ForwardRef(Slider)-root-15 Mui-disabled MuiSlider-colorPrimary MuiSlider-sizeMedium css-187mznn-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail ForwardRef(Slider)-rail-21 css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track ForwardRef(Slider)-track-20 css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 0%;"
    />
    <span
      class="MuiSlider-thumb ForwardRef(Slider)-thumb-16 Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb ForwardRef(Slider)-thumb-16 Mui-disabled MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 0%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0"
        data-index="0"
        disabled=""
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="0"
      />
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when <RangeSlider /> label is on 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root ForwardRef(Slider)-root-22 MuiSlider-colorPrimary MuiSlider-sizeMedium css-187mznn-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail ForwardRef(Slider)-rail-28 css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track ForwardRef(Slider)-track-27 css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 30%;"
    />
    <span
      class="MuiSlider-thumb ForwardRef(Slider)-thumb-23 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb ForwardRef(Slider)-thumb-23 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 30%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="30"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabelOpen MuiSlider-valueLabel ForwardRef(Slider)-valueLabel-24 css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have just one handle 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root ForwardRef(Slider)-root-1 MuiSlider-colorPrimary MuiSlider-sizeMedium css-187mznn-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail ForwardRef(Slider)-rail-7 css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track ForwardRef(Slider)-track-6 css-1gv0vcd-MuiSlider-track"
      style="left: 0%; width: 10%;"
    />
    <span
      class="MuiSlider-thumb ForwardRef(Slider)-thumb-2 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb ForwardRef(Slider)-thumb-2 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 10%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="10"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel ForwardRef(Slider)-valueLabel-3 css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            10
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`<RangeSlider /> Snapshots should match the snapshot when have two handles 1`] = `
.c0 {
  width: auto;
  padding: 0 12px;
}

<div
  class="c0"
>
  <span
    class="MuiSlider-root ForwardRef(Slider)-root-8 MuiSlider-colorPrimary MuiSlider-sizeMedium css-187mznn-MuiSlider-root"
  >
    <span
      class="MuiSlider-rail ForwardRef(Slider)-rail-14 css-14pt78w-MuiSlider-rail"
    />
    <span
      class="MuiSlider-track ForwardRef(Slider)-track-13 css-1gv0vcd-MuiSlider-track"
      style="left: 10%; width: 20%;"
    />
    <span
      class="MuiSlider-thumb ForwardRef(Slider)-thumb-9 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb ForwardRef(Slider)-thumb-9 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="0"
      style="left: 10%;"
    >
      <input
        aria-label="0"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        aria-valuetext="10"
        data-index="0"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="10"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel ForwardRef(Slider)-valueLabel-10 css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            10
          </span>
        </span>
      </span>
    </span>
    <span
      class="MuiSlider-thumb ForwardRef(Slider)-thumb-9 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb ForwardRef(Slider)-thumb-9 MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-eg0mwd-MuiSlider-thumb"
      data-index="1"
      style="left: 30%;"
    >
      <input
        aria-label="1"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        aria-valuetext="30"
        data-index="1"
        max="100"
        min="0"
        step="1"
        style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
        type="range"
        value="30"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-valueLabel ForwardRef(Slider)-valueLabel-10 css-nnid7-MuiSlider-valueLabel"
      >
        <span
          class="MuiSlider-valueLabelCircle"
        >
          <span
            class="MuiSlider-valueLabelLabel"
          >
            30
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
